# instant-ngp

./: CMakeLists.txt  README.md
.devcontainer/: README.md
data/nerf/fox/: transforms.json
docs/: nerf_dataset_tips.md
notebooks/: instant_ngp.ipynb
scripts/: run.py
